Embed shortcut for root app on the dashboard
Launch SuperSU from Settings

* images taken from commit by Jorrit Jongma <git@jongma.org>

Change-Id: Ia5dafad75501fb9443e8d8b0470a10b51d0aa4d5

Add dashboard summary to SuperSU

Change-Id: If8f98eff64b3b8e56246829119814af8ef25d9c1

Remove SuperSU entry from Settings when SuperSU is not installed

* part of code taken from original "Launch SuperSU from Settings" commit by Jorrit Jongma <git@jongma.org>

Change-Id: I1f01c068395687ad8d6abd41f843553afdcd8a33

Add support for Phh Superuser to dashboard

- Instead of creating an entire new activity, just use one generic
  activity for all root management apps

- Generic # vector from materialdesignicons.com, see link for credit
https://materialdesignicons.com/icon/pound

Change-Id: I0572f7492fa56640db572fd0d4439ddbe40e8e95

Add support for Magisk to dashboard

Change-Id: Ia119cd7a696f129a4370372229f914018d8e1066
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -584,4 +584,11 @@
     <string name="android_functional_updates_summary">In addition to AOSP security updates, we include Google\'s functional updates. These are patches that Google push in addition to security updates for Pixel devices to address functionality issues such as connectivity, stability, and performance. Since we support more than just Pixel devices, they are included for all our devices.</string>
     <string name="vendor_security_title">Vendor patch level</string>	
 
+    <!-- Root Management -->
+    <string name="rootmanagement_title">Root management</string>
+    <string name="rootmanagement_dashboard_summary">Manage root access</string>
+
+    <!-- Dummy string needed to hide SuperSU from launcher, no need to translate -->
+    <string name="supersu_title">SuperSU</string>
+
 </resources>
