Add option to scramble pin layout when unlocking (1/2).
@mydongistiny: Ported to Pie
Change-Id: I3e2c200a0a31d3c765831bc30280029a50c88051
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -133,6 +133,10 @@
     <string name="clang_version">Clang</string>
     <string name="clang_version_default">Unknown</string>
 
+    <!-- Scramble pin -->
+    <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
+    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
+
 </resources>
 
 
