Settings: add volume tone toggle back [2/2]
This patch allows the users to choose if they want the audible tone when adjusting the volume

PureNexus Edits:
*update for 8.1 and add a preference controller

[POSP: Kshitij Gupta]
- Adapt to the new code-style
- Disable by default

Change-Id: I84e2085b9be0a87ddfdbd5175ae6b218c943922c
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -416,4 +416,7 @@
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
 
+    <!-- Volume settings - Volume adjustment sound -->
+    <string name="volume_adjust_sounds_title">Volume key sounds</string>
+
 </resources>
