Settings: add volume tone toggle back [2/2]
This patch allows the users to choose if they want the audible tone when adjusting the volume

PureNexus Edits:
*update for 8.0 and add a preference controller

Change-Id: I84e2085b9be0a87ddfdbd5175ae6b218c943922c
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -571,5 +571,7 @@
     <string name="theme_accent_picker_title">Accent Manager</string>
     <string name="theme_accent_picker_summary">Select system theme accent color</string>
     <string name="theme_accent_picker_default">Default</string>
+
+    <string name="volume_adjust_sounds_title">Volume adjustment sounds</string>
 	
 </resources>
