--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -285,4 +285,9 @@
     <!-- Screenshot shutter sound -->
     <string name="screenshot_shutter_sound_title">Screenshot shutter sound</string>
 
+    <!-- Changelog -->
+    <string name="changelog_title">Changelog</string>
+    <string name="changelog_summary">See the most recent commits</string>
+    <string name="changelog_error">Unable to load changelog</string>
+
 </resources>
