--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -33,33 +33,41 @@
         android:order="1"
         android:title="@string/xtended_about_info"
         android:summary="@string/xtended_about_info_summary_title"
-        android:fragment="com.android.settings.xtended.XtendedDevsInfo" />
+	android:fragment="com.android.settings.xtended.XtendedDevsInfo" />
+
+    <!-- Changelog -->
+    <Preference
+        android:key="changelog"
+        android:order="2"
+        android:title="@string/changelog_title"
+        android:summary="@string/changelog_summary"
+        android:fragment="com.android.settings.deviceinfo.Changelog" />
 
     <!-- Device name -->
     <com.android.settings.widget.ValidatedEditTextPreference
         android:key="device_name"
-        android:order="2"
+        android:order="3"
         android:title="@string/my_device_info_device_name_preference_title"
         android:summary="@string/summary_placeholder"/>
 
     <!-- Account name -->
     <Preference
         android:key="branded_account"
-        android:order="3"
+        android:order="4"
         android:title="@string/my_device_info_account_preference_title"
         android:summary="@string/summary_placeholder"/>
 
     <!-- Phone number -->
     <Preference
         android:key="phone_number"
-        android:order="4"
+        android:order="5"
         android:title="@string/status_number"
         android:summary="@string/summary_placeholder"
         android:selectable="false"/>
 
     <Preference
         android:key="emergency_info"
-        android:order="5"
+        android:order="6"
         android:title="@string/emergency_info_title"
         android:summary="@string/summary_placeholder"/>
 
