--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -126,7 +126,9 @@
     <string name="translator_6">vo.stro</string>
     <string name="language_6">Indonesian</string>
 
-
+    <!-- App details: open play store link if app is user installed -->
+    <string name="app_play_store">Google Play</string>
+	
 </resources>
 
 
