Reset battery stats [2/2]
Change-Id: Ie046c3b942310982a95242dba703ed54149649cd

--- a/res/values/gzosp_strings.xml
+++ b/res/values/gzosp_strings.xml
@@ -57,5 +57,10 @@
     <string name="battery_image">Battery image</string>
     <string name="battery_image_description">Show battery image in status bar</string>
 
+    <!-- Reset battery stats -->
+    <string name="ok">Ok</string>
+    <string name="menu_stats_reset">Reset stats</string>
+    <string name="reset_stats_msg">Battery history stats are going to be reset</string>
+
 </resources>
 
