--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -416,5 +416,11 @@
     <!-- Scramble PIN Layout on Lockscreen -->
     <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
     <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
+
+   <!-- Per-app data restrictions -->
+   <string name="data_usage_app_restrict_data">Cellular data</string>
+   <string name="data_usage_app_restrict_data_summary">Enable usage of cellular data</string>
+   <string name="data_usage_app_restrict_wifi">Wi\u2011Fi data</string>
+   <string name="data_usage_app_restrict_wifi_summary">Enable usage of Wi\u2011Fi data</string>
 	
 </resources>
