Expose switchbar background color
Change-Id: Idc8b09c921bb57c9464d6ea956cfdd9b2b95e6a8

Signed-off-by: xyyx <xyyx@mail.ru>

--- a/res/values/custom_colors.xml
+++ b/res/values/custom_colors.xml
@@ -16,6 +16,9 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Settings switchbar background -->
+    <color name="switchbar_background_color">?android:attr/colorSecondary</color>
+
     <!-- Expanded desktop -->
     <drawable name="expanded_item_bg_activated">#ffEEEEEE</drawable>
     <drawable name="expanded_item_bg">@android:color/background_light</drawable>
