Allow to quickly open Running Services from QS panel [2/2]
@Mazda-- : Remove text from actionbar / Use overflow menu

ezio: Running services: update actionbar title accordingly
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -254,4 +254,7 @@
     <string name="stabilization_position_friction_title">Position friction</string>
     <string name="stabilization_velocity_amplitude_title">Velocity amplitude</string>
 
+    <!-- Running services -->
+    <string name="background_processes_settings_title">Background processes</string>
+
 </resources>
