--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -382,5 +382,8 @@
     <string name="expanded_desktop_style">Expanded desktop style</string>
     <string name="expanded_desktop_style_description">Choose a default expanded desktop style</string>
     <string name="expanded_desktop_title">Expanded desktop options</string>
+
+    <!-- Running services -->
+    <string name="background_processes_settings_title">Background processes</string>
     
 </resources>
