--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -128,7 +128,11 @@
 
     <!-- App details: open play store link if app is user installed -->
     <string name="app_play_store">Google Play</string>
-	
+
+    <!-- Clang version -->
+    <string name="clang_version">Clang</string>
+    <string name="clang_version_default">Unknown</string>
+
 </resources>
 
 
