--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -22,17 +22,19 @@
     settings:keywords="@string/keywords_ambient_display_screen"
     android:title="@string/ambient_display_screen_title">
 
-    <PreferenceCategory
-        android:key="ambient_display_category_when_to_show"
-        android:title="@string/ambient_display_category_triggers">
-
         <SwitchPreference
             android:key="ambient_display_always_on"
             android:title="@string/doze_always_on_title"
             android:summary="@string/doze_always_on_summary"
             settings:controller="com.android.settings.display.AmbientDisplayAlwaysOnPreferenceController" />
 
-        <Preference
+        <SwitchPreference
+            android:key="ambient_display_notification"
+            android:title="@string/doze_title"
+            android:summary="@string/doze_summary"
+            settings:controller="com.android.settings.display.AmbientDisplayNotificationsPreferenceController" />
+
+        <!--Preference
             android:key="ambient_display_double_tap"
             android:title="@string/ambient_display_title"
             android:fragment="com.android.settings.gestures.DoubleTapScreenSettings"
@@ -42,20 +44,16 @@
             android:key="ambient_display_pick_up"
             android:title="@string/ambient_display_pickup_title"
             android:fragment="com.android.settings.gestures.PickupGestureSettings"
-            settings:controller="com.android.settings.gestures.PickupGesturePreferenceController" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="ambient_display_category_notification"
-        android:layout="@layout/preference_category_no_label">
+            settings:controller="com.android.settings.gestures.PickupGesturePreferenceController" /-->
 
         <SwitchPreference
-            android:key="ambient_display_notification"
-            android:title="@string/doze_title"
-            android:summary="@string/doze_summary"
-            settings:controller="com.android.settings.display.AmbientDisplayNotificationsPreferenceController" />
-
-    </PreferenceCategory>
+            android:key="ambient_doze_auto_brightness"
+            android:title="@string/ambient_doze_auto_brightness_title"
+            android:summary="@string/ambient_doze_auto_brightness_summary"
+            android:defaultValue="true"/>
+		 
+        <com.msm.xtended.preferences.CustomSeekBarPreference
+            android:key="ambient_doze_custom_brightness"
+            android:title="@string/ambient_doze_custom_brightness_title" />
 
 </PreferenceScreen>
