Add option to scramble pin layout when unlocking [2/2]
Change-Id: Idd63cb337d0f38b17cd586c1511d44e90d4f15c5

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -407,4 +407,8 @@
     <string name="changelog_xtended_summary">View recent changes</string>
     <string name="changelog_xtended_error">Unable to load changelog</string>
 
+    <!-- Scramble PIN Layout on Lockscreen -->
+    <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
+    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
+	
 </resources>
