Allow to customize notification led light [1/2] for both legacy apps and new api26 apps (per-channel led customization) Add reset button to notification light color pref
Nitrogen:
Increased leds on and off time

Change-Id: I046d556f16732c0062e862b891ba505cd860e4b8

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -279,4 +279,13 @@
     <string name="font_picker_toast">Please wait, applying fonts.</string>
     <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
 
+    <!-- Custom light color -->
+    <string name="light_customization">Led light notification</string>
+    <string name="custom_light_title">Light color</string>
+    <string name="custom_light_on_time_title">Light ON time during led pulse (ms)</string>
+    <string name="custom_light_off_time_title">Light OFF time during led pulse (ms)"</string>
+    <string name="app_notifications_info_desc">Tap on one of above channels to configure their light colors and other options</string>
+    <string name="value_equals_default">auto</string>
+
+
 </resources>
