--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -287,5 +287,6 @@
     <string name="app_notifications_info_desc">Tap on one of above channels to configure their light colors and other options</string>
     <string name="value_equals_default">auto</string>
 
+    <string name="show_light_on_zen_title">Blink during Do Not Disturb</string>
 
 </resources>
