--- a/res/xml/legacy_channel_notification_settings.xml
+++ b/res/xml/legacy_channel_notification_settings.xml
@@ -57,22 +57,20 @@
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="custom_light"
             android:title="@string/custom_light_title"
-            settings:defaultColorValue="0x00FFFFFF" />
+            settings:defaultColorValue="0xFFFFFFFF" />
 
-        <com.nitrogen.settings.preferences.CustomSeekBarPreference
+        <com.xtended.xtensions.preferences.CustomSeekBarPreference
             android:key="custom_light_on_time"
             android:title="@string/custom_light_on_time_title"
-            android:defaultValue="0"
             settings:defaultText="@string/value_equals_default"
             settings:min="0"
             android:max="10000"
             settings:interval="100"
             settings:units="" />
 
-        <com.nitrogen.settings.preferences.CustomSeekBarPreference
+        <com.xtended.xtensions.preferences.CustomSeekBarPreference
             android:key="custom_light_off_time"
             android:title="@string/custom_light_off_time_title"
-            android:defaultValue="0"
             settings:defaultText="@string/value_equals_default"
             settings:min="0"
             android:max="10000"
