[2/2] Settings: poor man battery style tweaks
for now just add hide/show image and or percentage

Change-Id: I9c5f0bdb79aa007ad9cc779bf2b460b2a89ca4db

--- a/res/values/gzosp_strings.xml
+++ b/res/values/gzosp_strings.xml
@@ -53,5 +53,9 @@
     <string name="dev_2">Santosh Jha aka SuperDroidBond</string>
     <string name="dev2_description">Developer, ROM and Customizations </string>
 
+    <!-- Battery image -->
+    <string name="battery_image">Battery image</string>
+    <string name="battery_image_description">Show battery image in status bar</string>
+
 </resources>
 
