Settings: Add back increasing ring feature (2/3)
This is a squash of the following commits:

Author: Danny Baumann <dannybaumann@web.de>
Date:   Tue Nov 11 13:14:07 2014 +0100

    Add back increasing ring feature (2/3).

    Change-Id: Iafc79a57651db327a100e0f1723b62f442b638be

Author: Danny Baumann <dannybaumann@web.de>
Date:   Mon Nov 24 13:05:39 2014 +0100

    Fix NPE.

    When entering the notification prefs sub activity without the increasing
    ring pref being visible and leaving it right away, onActivityStop()
    threw an NPE because the handler wasn't yet constructed.

    Change-Id: Ia4291d8ac3d1dbf76d432db7e0e973844163c4ae

Author: Danny Baumann <dannybaumann@web.de>
Date:   Fri May 29 08:48:46 2015 +0200

    Fix up increasing ring tone volume preview behaviour.

    Change-Id: Ibe7fdf1ee7f0aa1c7c76052df69fa92e8b6a2ffd

Author: Keith Mok <kmok@cyngn.com>
Date:   Tue Jul 12 09:45:45 2016 -0700

    Settings: Always set ramp-up time value during bindView

    onProgressChange is not always called if we set the
    ramp up time to 5 sec (0 in seekbar value, since it is
    the default value, no change).
    Causing the text showing the ramp up time text value not
    updated and display as empty when user enable/disable
    increasing ring volume with ramp up time set to 5 sec.

    FEIJ-1572

    Change-Id: Id32d6b51aab05e80be59bc1912c4ae7c5d114ac5

Author: Zhao Wei Liew <zhaoweiliew@gmail.com>
Date:   Wed, 18 Jan 2017 15:55:13 +0800

    Move notif volume pref on top of increasing ring pref

    Change Iafc79a57651db327a100e0f1723b62f442b638be added two
    increasing ringtone-related preferences between the notification
    volume preference and the ring volume preference.

    However, the notification volume preference should be grouped
    together with the media, alarm, and ring volume preferences.

    Hence, move the notification volume preference back to where
    it should be.

    Change-Id: I138e6f78b6c231643d86746858e0cbdfcb0942eb

Author:

--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -294,4 +294,9 @@
     <string name="changelog_summary">See the most recent commits</string>
     <string name="changelog_error">Unable to load changelog</string>
 
+    <!-- Increasing ring tone volume -->
+    <string name="increasing_ring_volume_option_title">Increasing ring volume</string>
+    <string name="increasing_ring_min_volume_title">Start volume</string>
+    <string name="increasing_ring_ramp_up_time_title">Ramp-up time</string>
+
 </resources>
