--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -155,6 +155,11 @@
           android:key="boot_sounds"
           android:title="@string/boot_sounds_title" />
 
+        <!-- Screenshot sound -->
+        <SwitchPreference
+          android:key="screenshot_sounds"
+          android:title="@string/screenshot_sound_title" />
+
         <!-- Emergency tone -->
         <DropDownPreference
           android:key="emergency_tone"
