--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -226,4 +226,11 @@
     <string name="increasing_ring_min_volume_title">Start volume</string>
     <string name="increasing_ring_ramp_up_time_title">Ramp-up time</string>
 
+    <!-- Optimal Battery Level Alert -->
+    <string name="alert_on_charged_level_title">Optimal charge level alert</string>
+    <string name="alert_on_charged_level_summary">Notify and play sound/vibrate on optimal charge level if screen is off since at least 1 min.\nNotification can be disabled separately long pressing on it.</string>
+    <string name="alert_on_charged_level_dis">Disabled</string>
+    <string name="alert_on_charged_level_80">"80%"</string>
+    <string name="alert_on_charged_level_90">"90%"</string>
+    <string name="alert_on_charged_level_99">"99%"</string>
 </resources>
