Let's use last screenOn brightness value for ambient display [2/2] AmbientDisplay: Battery status (2/2)
Change-Id: I2cb9f8a4d32a792d86cb8a9fecedfcc94d032c2b
Signed-off-by: calebcabob <calphonic@gmail.com>

Conflicts:
	res/values/beast_strings.xml
	res/xml/ambient_display_settings.xml

--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -38,14 +38,33 @@
             android:fragment="com.android.settings.gestures.PickupGestureSettings" />
 
     </PreferenceCategory>
+    <PreferenceCategory 
+            android:key="ambient_display_battery_status" 
+            android:title="@string/ambient_display_show_battery_cat"> 
+ 
+        <com.xtended.xtensions.preferences.SystemSettingSwitchPreference 
+            android:key="ambient_display_show_battery" 
+            android:title="@string/ambient_display_show_battery_icon" 
+            android:summary="@string/ambient_display_show_battery_icon_summary" 
+            android:defaultValue="true"/> 
+ 
+        <com.xtended.xtensions.preferences.SystemSettingSwitchPreference 
+            android:key="ambient_display_show_battery_text" 
+            android:title="@string/ambient_display_show_battery_percent" 
+            android:summary="@string/ambient_display_show_battery_percent_summary" 
+            android:dependency="ambient_display_show_battery" 
+            android:defaultValue="true"/> 
+ 
+    </PreferenceCategory> 
 
-    <PreferenceCategory>
+    <SwitchPreference
+        android:key="ambient_doze_auto_brightness"
+        android:title="@string/ambient_doze_auto_brightness_title"
+        android:summary="@string/ambient_doze_auto_brightness_summary" />
 
-        <SwitchPreference
-            android:key="ambient_display_notification"
-            android:title="@string/doze_title"
-            android:summary="@string/doze_summary" />
-
-    </PreferenceCategory>
+    <SwitchPreference
+        android:key="ambient_display_notification"
+        android:title="@string/doze_title"
+        android:summary="@string/doze_summary" />
 
 </PreferenceScreen>
