Let's use last screenOn brightness value for ambient display [2/2] AmbientDisplay: Battery status (2/2)
Change-Id: I2cb9f8a4d32a792d86cb8a9fecedfcc94d032c2b
Signed-off-by: calebcabob <calphonic@gmail.com>

Conflicts:
	res/values/beast_strings.xml
	res/xml/ambient_display_settings.xml

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -226,4 +226,15 @@
     <string name="increasing_ring_min_volume_title">Start volume</string>
     <string name="increasing_ring_ramp_up_time_title">Ramp-up time</string>
 
+    <!-- Ambient Display Brightness --> 
+    <string name="ambient_doze_auto_brightness_title">Ambient auto brightness</string> 
+    <string name="ambient_doze_auto_brightness_summary">Use last screen-on adaptive brightness value for Ambient Display or Lift to Wake screen</string> 
+
+    <!-- Doze battery options --> 
+    <string name="ambient_display_show_battery_cat">Battery Status</string> 
+    <string name="ambient_display_show_battery_icon">Enable</string> 
+    <string name="ambient_display_show_battery_icon_summary">Show battery indicator during pulse</string> 
+    <string name="ambient_display_show_battery_percent">Percent</string> 
+    <string name="ambient_display_show_battery_percent_summary">Show battery percent during pulse</string> 
+
 </resources>
