--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -101,11 +101,22 @@
         android:title="@string/ambient_display_screen_title"
         android:fragment="com.android.settings.display.AmbientDisplaySettings" />
 
+    <Preference
+        android:key="ambient_display_custom"
+        android:title="@string/ambient_display_screen_title" >
+        <intent
+            android:action="com.android.settings.action.EXTRA_SETTINGS"
+            android:targetPackage="com.custom.ambient.display"
+            android:targetClass="com.custom.ambient.display.DozeSettings" />
+    </Preference>
+
     <!-- Cross-listed item, if you change this, also change it in power_usage_summary.xml
     <Preference
         android:key="ambient_display"
         android:title="@string/ambient_display_screen_title"
         android:fragment="com.android.settings.display.AmbientDisplaySettings" />
+
+    </PreferenceCategory>
 
      Hide night mode for now
     <ListPreference
