Settings: Introduce Color Manager (ColorOM)
Color Manager a.k.a Color Overlay Manager (ColorOM) is a light interface
for applying themes and accents. You can choose between base themes such
as (Light, Dark or Automatic etc.) or choose between several system color accents.

Automatic: Restores aosp theming logic, by theming the system based
on the wallpaper that is selected.

Light: Forces the systems light (default) theme and does not change
regardless if the wallpaper is changed.

Dark: Forces the systems dark theme and does not change regardless
if the wallpaper is changed.

ColorOM Links the default "Theme" changer from aoscp which allows
changing system accents via overlay package.

Contributors:
@maxwen - Dark mode logic
@sagarshah1729
@AgentFabulous

Change-Id: If869a36b73ebc5cfd79a31e168b3fd79b7475351

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -91,5 +91,18 @@
     <string name="xtensions_title">Xtended Options</string>
     <string name="xtensions_activity_summary">Our Xtensions of Features </string>
 
+    <!-- Color Manager -->
+    <string name="color_manager_title">Color Manager</string>
+    <string name="color_manager_summary">Change system colors with various theme modes</string>
+    <!-- Color Manager: Options -->
+    <string name="theme_auto_title">Automatic</string>
+    <string name="theme_auto_title_summary">Themes the system based on chosen wallpaper</string>
+    <string name="theme_light_title">Light</string>
+    <string name="theme_light_title_summary">Themes the system to white</string>
+    <string name="theme_dark_title">Dark</string>
+    <string name="theme_dark_title_summary">Themes the system to dark grey</string>
+    <!-- Color Manager: Device accent -->
+    <string name="device_accent_title">Device Accent</string>
+
 </resources>
 
