ColorOM: Support black theme
Change-Id: Idf88c571ef7acf6694a96dab3f3f403fac14e565

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -103,6 +103,8 @@
     <string name="theme_dark_title_summary">Themes the system to dark grey</string>
     <!-- Color Manager: Device accent -->
     <string name="device_accent_title">Device Accent</string>
+    <string name="theme_black_title">Black</string>
+    <string name="theme_black_title_summary">Themes the system to black</string>
 
 </resources>
 
