Settings: Add package name to installed app details
BenzoEdit: Ported to Pie
Change-Id: If13b7dc041777138409c6a71b1c4730b6c78b97f
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -159,6 +159,9 @@
     <string name="display_rotation_180_title">180 degrees</string>
     <string name="display_rotation_270_title">270 degrees</string>
 
+    <!-- Manage applications, package string displayed in app snippet -->
+    <string name="packagename_text"><xliff:g id="package_name">%1$s</xliff:g></string>
+
 </resources>
 
 
