--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -303,4 +303,7 @@
     <string name="expanded_desktop_style_description">Choose a default expanded desktop style</string>
     <string name="expanded_desktop_title">Expanded desktop options</string>
 
+    <!-- Notification log -->
+    <string name="notification_log_summary">Show notifications history log</string>
+
 </resources>
