Disable useless alpha slider for notification lights color picker
Signed-off-by: xyyx <xyyx@mail.ru>

--- a/res/xml/upgraded_channel_notification_settings.xml
+++ b/res/xml/upgraded_channel_notification_settings.xml
@@ -85,7 +85,7 @@
             android:title="@string/custom_light_title"
             settings:defaultColorValue="0x00FFFFFF" />
 
-        <com.nitrogen.settings.preferences.CustomSeekBarPreference
+        <com.xtended.xtensions.preferences.CustomSeekBarPreference
             android:key="custom_light_on_time"
             android:title="@string/custom_light_on_time_title"
             android:defaultValue="0"
@@ -95,7 +95,7 @@
             settings:interval="100"
             settings:units="" />
 
-        <com.nitrogen.settings.preferences.CustomSeekBarPreference
+        <com.xtended.xtensions.preferences.CustomSeekBarPreference
             android:key="custom_light_off_time"
             android:title="@string/custom_light_off_time_title"
             android:defaultValue="0"
