--- a/res/xml/xtended_info.xml
+++ b/res/xml/xtended_info.xml
@@ -87,6 +87,11 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             android:icon="@drawable/ic_devs_phone" >
         </Preference>
 
+        <Preference
+            android:title="@string/hht_4"
+            android:icon="@drawable/ic_devs_phone" >
+        </Preference>
+
 </PreferenceCategory>
 
 </PreferenceScreen>
