--- a/res/xml/xtended_info.xml
+++ b/res/xml/xtended_info.xml
@@ -18,8 +18,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="Xtended Project">
 
 <PreferenceCategory
-              android:key="about"
-              android:title="@string/xtended_about_info" >
+              android:key="about" >
 
         <!-- Xtended About logo -->
         <PreferenceScreen
