--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -90,13 +90,13 @@
         android:title="@string/screensaver_settings_title"
         android:fragment="com.android.settings.dream.DreamSettings" />
 
-    <!-- Cross-listed item, if you change this, also change it in power_usage_summary.xml
+    <!-- Cross-listed item, if you change this, also change it in power_usage_summary.xml -->
     <Preference
         android:key="ambient_display"
         android:title="@string/ambient_display_screen_title"
         android:fragment="com.android.settings.display.AmbientDisplaySettings" />
 
-     Hide night mode for now
+    <!-- Hide night mode for now
     <ListPreference
         android:key="night_mode"
         android:title="@string/night_mode_title"
@@ -105,7 +105,6 @@
         android:entries="@array/night_mode_entries"
         android:entryValues="@array/night_mode_values" /> -->
 
-   <!--
     <SwitchPreference
         android:key="camera_gesture"
         android:title="@string/camera_gesture_title"
@@ -118,7 +117,7 @@
     <SwitchPreference
         android:key="tap_to_wake"
         android:title="@string/tap_to_wake"
-        android:summary="@string/tap_to_wake_summary" /> -->
+        android:summary="@string/tap_to_wake_summary" />
 
     <ListPreference
         android:key="theme"
