--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -205,4 +205,7 @@
     <string name="theme_applied_toast">Theme applied.</string>
     <string name="applying_theme_toast">Applying theme, please wait...</string>
 
+    <!-- Charging vibration -->
+    <string name="charging_vibro_title">Charging vibration</string>
+
 </resources>
