Vibration instead of beep for in-call notifications [2/2]
Change-Id: Ic8591ccc6ffa597c0d2a75f87bfb0fd74e70fb1b
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -356,4 +356,8 @@
     <string name="less_notification_sounds_2m">Every 2 minutes</string>
     <string name="less_notification_sounds_5m">Every 5 minutes</string>
 
+    <!-- Less annoying in call notifications -->
+    <string name="incall_notifications_vibrate">Vibrate in-call notifications</string>
+    <string name="incall_notifications_vibrate_summary">Vibrate instead of playing a sound for in-call notifications</string>
+
 </resources>
