[2/2] Setting: add USB default config
reuse the dev settings USB setting to define a connect default
USB mode. Since this mode is used on EVERY connect
even whe locked this is a potential security risk
so make sure we warn the user when enabled

Change-Id: I310aeea7e3c3c7c1172ec67b5fdb6ca4184d2d49

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -543,5 +543,12 @@
     <string name="sp_profile_entries_off">Off</string>
     <string name="sp_profile_entries_no_override">No override</string>
     <string name="profile_select">Select profile</string>
+
+
+    <!-- Default USB configuration -->
+    <string name="select_default_usb_configuration_title">Select default USB configuration</string>
+    <string name="select_default_usb_configuration_dialog_title">Select USB Configuration</string>
+    <string name="default_usb_configuration" translatable="false" >default</string>
+    <string name="select_usb_default_confguration_warning">WARNING: Default USB configuration is enabled also when device is locked!\n\nDo you really want to enable this configuration?</string>
 	
 </resources>
